--- a/classes/Account_TerritoryMapHelper.cls
+++ b/classes/Account_TerritoryMapHelper.cls
@@ -210,5 +210,7 @@ public with sharing class Account_TerritoryMapHelper {
         }
         
     }
+    
+    //autorabit changes.
 }
 //End of the class
